# Program-design

Lab8/: 8.docx
Lab8/arm/: a.txt  b.sh  b.txt  equation  equation.s  file  file.s  invert  invert.s  macros.s  main  main.s
lab1/: lab1_task1_var1.asm  lab1_task1_var2.asm  lab1_task1_var3.asm  lab1_task1_var4.asm  lab1_task2_var1.asm  лаба1.docx
lab2/: lab2_task1_var1.asm  lab2_task2_var1.asm  лаба2.docx
lab3/: task_1_1.asm  task_1_2.asm  task_1_2_fix.LST  task_1_2_fix.S19  task_1_2_fix.asm  test.asm  лаба3.docx
lab4/: example.asm  lab4.asm  лаба4.docx
lab5/: example.txt  lab5_version1.asm  лаба5.docx
lab6/: lab6.asm  ~$лаба6.docx  лаба6.docx
lab7/: 7.docx
lab7/untitled/: CMakeLists.txt  complete_proc.asm  get_btime.asm  get_cmdline.asm  get_info.asm  get_name.asm  get_state.asm  get_time.asm  main.cpp  resume_proc.asm  suspend_proc.asm
